<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">
<fragment
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="58"
    android:id="@+id/map"
    tools:context=".MapsActivity"
    android:name="com.google.android.gms.maps.SupportMapFragment" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/StartWalk"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/walk"
                android:textSize="12sp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/walking"
                android:background="@drawable/btn_green_matte"
                />
            <Button
                android:id="@+id/StartRun"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/run"
                android:textSize="12sp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/running"
                android:background="@drawable/btn_green_matte"
                />
            <Button
                android:id="@+id/StartBicycle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bicycle"
                android:textSize="12sp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/bicycle"
                android:background="@drawable/btn_green_matte"
                />
            <Button
                android:id="@+id/StartAuto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/auto"
                android:textSize="12sp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/car"
                android:background="@drawable/btn_green_matte"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/Pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pause"
                android:textSize="12sp"
                android:layout_weight="1"
                android:visibility="invisible"
                android:drawableLeft="@drawable/pause"
                android:background="@drawable/btn_orange_matte"
                />
            <Button
                android:id="@+id/Stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:textSize="12sp"
                android:layout_weight="1"
                android:visibility="visible"
                android:drawableLeft="@drawable/stop"
                android:background="@drawable/btn_red_matte"
                />
        </LinearLayout>

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="26">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--TIMER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration" />

                <TextView
                    android:id="@+id/TVDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00:00" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <!-- Megtett út   -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance" />

                    <TextView
                        android:id="@+id/TVdistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />

                </LinearLayout>
                <!-- Aktuális seb -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/currentvelocity" />

                    <TextView
                        android:id="@+id/TVcurrentvelo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <!-- Szintkülönbség   -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/elevationgain" />

                    <TextView
                        android:id="@+id/TVelevationgain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />

                </LinearLayout>
                <!-- Átlag seb -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/avaragevelocity" />

                    <TextView
                        android:id="@+id/TVaveragevelo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/HistoryBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:text="@string/history"
        android:textSize="12sp"
        android:drawableLeft="@drawable/clock"
        />

</LinearLayout>